<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".load.LoadFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/action_btn_container"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearlay"
                android:orientation="vertical"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="52dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upload_btn"
                    android:text="@string/upload_btn_text"
                    android:layout_width="match_parent"
                    app:cornerRadius="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="12dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wallpapers_btn"
                    android:text="@string/wallpapers_btn_text"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    app:cornerRadius="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/feedback_btn"
                    android:text="@string/feedback_btn_text"
                    android:layout_marginTop="8dp"
                    app:cornerRadius="8dp"
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:id="@+id/image_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_list"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:spanCount="3"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_fetched_images"
                tools:itemCount="12" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/return_btn"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            app:cornerRadius="8dp"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>