<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="imageClickedUrl"
            type="String" />
        <variable
            name="isDeviceImage"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent"
        tools:context=".ui.edit.EditFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/undo_redo_container"
            android:paddingTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/undo_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:icon="@drawable/ic_undo"
                app:iconGravity="textStart"
                app:rippleColor="?attr/colorPrimary"
                android:text="@string/undo_btn_text"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/redo_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:icon="@drawable/ic_redo"
                app:iconGravity="textEnd"
                app:rippleColor="?attr/colorPrimary"
                android:text="@string/redo_btn_text"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/photoEditorView"
            imageForEdit="@{imageClickedUrl}"
            isDeviceImage="@{isDeviceImage}"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_action_container"
            app:layout_constraintTop_toBottomOf="@id/undo_redo_container"
            android:layout_height="0dp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom_action_container"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edit_action_list"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/black_shade"
                app:spanCount="3"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/edit_btn_view"
                tools:itemCount="6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/cancel_edit_btn"
                    android:contentDescription="@string/cancel_edit_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_edit_clear"
                    android:layout_marginStart="8dp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/current_editing_action"
                    app:layout_constraintEnd_toStartOf="@id/download_image_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Brush"
                    android:textSize="18sp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancel_edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/download_image_btn"
                    android:contentDescription="@string/save_edited_image"
                    android:layout_marginEnd="8dp"
                    app:icon="@drawable/ic_edit_download"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:iconGravity="end"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>